--- a/.github/workflows/prexample.yml
+++ b/.github/workflows/prexample.yml
@@ -7,7 +7,7 @@ jobs:
   createPullRequest:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
