--- a/.github/workflows/prexample.yml
+++ b/.github/workflows/prexample.yml
@@ -7,6 +7,7 @@ jobs:
   createPullRequest:
     runs-on: ubuntu-latest
     permissions:
+      actions: write
       contents: write
       pull-requests: write
     steps:
